<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakery_activity_bgcolor"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dip"
        android:gravity="left"
        android:text="@string/card_type"
        android:textColor="@drawable/white"
        android:textIsSelectable="FALSE"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/payment_choice_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="left"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/master_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ct_1"
            android:textColor="@drawable/white"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/ae_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ct_2"
            android:textColor="@drawable/white"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/visa_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ct_3"
            android:textColor="@drawable/white" />
    </RadioGroup>

    <TableLayout
        android:id="@+id/delivery_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow android:layout_marginBottom="15dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="45"
                android:gravity="left"
                android:text="@string/card_sig"
                android:textColor="@drawable/white"
                android:textIsSelectable="FALSE"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/card_sig_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="55"
                android:background="@drawable/text_view_shape"
                android:gravity="center_vertical|left"
                android:inputType="text"
                android:textSize="13sp" />
        </TableRow>
        <!-- cvv -->

        <TableRow android:layout_marginBottom="15dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="45"
                android:gravity="left"
                android:text="@string/cvv"
                android:textColor="@drawable/white"
                android:textIsSelectable="FALSE"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/cvv_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="55"
                android:background="@drawable/text_view_shape"
                android:gravity="center_vertical|left"
                android:inputType="text"
                android:textSize="13sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/valid_date_button"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_marginRight="5dip"
                android:layout_weight="45"
                android:background="@drawable/btn_view_shape"
                android:contentDescription="@string/none"
                android:gravity="center"
                android:onClick="@string/valid_date_button_clicked"
                android:padding="0dp"
                android:text="@string/choose_date"
                android:textColor="@drawable/white"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/valid_date_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="55"
                android:background="@drawable/text_view_shape"
                android:gravity="center_vertical|left"
                android:inputType="text"
                android:textSize="13sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/cake_list_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:background="@drawable/btn_view_shape"
        android:contentDescription="@string/none"
        android:onClick="@string/confirm_button_clicked"
        android:text="@string/con_pay"
        android:textColor="@drawable/white" />

</LinearLayout>