<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakery_activity_bgcolor"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:background="@drawable/btn_view_shape"
        android:gravity="center_vertical|left"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/candle_btn"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:background="@drawable/add_btn"
            android:contentDescription="@string/none"
            android:onClick="@string/BtnClicked" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/candles"
            android:textColor="@drawable/white"
            android:textIsSelectable="FALSE"
            android:textSize="15sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/candle_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:fadingEdge="none"
        android:scrollbars="vertical"
        android:scrollingCache="false"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_view_shape"
        android:gravity="center_vertical|left"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/box_btn"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:background="@drawable/add_btn"
            android:contentDescription="@string/none"
            android:onClick="@string/BtnClicked" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/box"
            android:textColor="@drawable/white"
            android:textIsSelectable="FALSE"
            android:textSize="15sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/box_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:fadingEdge="none"
        android:scrollbars="vertical"
        android:scrollingCache="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dip"
        android:background="@drawable/btn_view_shape"
        android:contentDescription="@string/none"
        android:onClick="@string/backBtnClicked"
        android:text="@string/back"
        android:textColor="@drawable/white" />

</LinearLayout>