<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakery_activity_bgcolor"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/you_select"
        android:textColor="@drawable/white"
        android:textIsSelectable="FALSE"
        android:textSize="15sp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/text_view_shape" >

        <TableRow android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/cname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cake_name"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="15sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_size"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/csize"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_size"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/diy_no"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/diy_no"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/diy_yes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/diy_yes"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp"
                android:visibility="gone" />
        </TableRow>

        <TableRow android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_fruit"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/cfruit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_fruit"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_jam"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/cjam"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_jam"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_topping"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ctopping"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_topping"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/cake_box_row"
            android:layout_marginBottom="5dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_box"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/cake_box"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/cake_candle_row"
            android:layout_marginBottom="5dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_candle"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/cake_candle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:singleLine="false"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_price"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cake_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_price"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="15sp" />
        </TableRow>

        <TableRow android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_acc"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cake_acc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/cake_price"
                android:textColor="@drawable/black"
                android:textIsSelectable="FALSE"
                android:textSize="15sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/confirm_order_btn"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_view_shape"
        android:contentDescription="@string/none"
        android:onClick="orderConfirmBtnClicked"
        android:text="@string/con_order"
        android:textColor="@drawable/white" />

    <Button
        android:id="@+id/cake_acc_btn"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_view_shape"
        android:contentDescription="@string/none"
        android:onClick="accClicked"
        android:text="@string/acc_buy"
        android:textColor="@drawable/white" />

</LinearLayout>